--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
+    <div class="btn-div">
+        <button class=select-btn>Select</button>
+    </div>
     
-    <div class="main-container">
-
+    <div class="body-container">
+        
     </div>
 
 </body>
